# saguis-dinov3

./: .gitignore  README.md  pyproject.toml  sandbox.ipynb
data/: aurita_location_fixed.csv  jacchus_location_fixed.csv  penicillata_location_fixed.csv
notebooks/: EDA.ipynb
src/app/: paths.py
src/app/cli/: predict_one.py
src/app/data/: images.py  tabular.py
src/app/features/: tabular.py  urban_proximity.py
src/app/inference/: predictor.py
src/app/pipeline/: check_cv_split.py  hyperparam_search.py  make_embeddings.py  preprocess_and_filter_images.py  train_classifier.py  train_final_model.py  train_pca_model.py
src/app/train/: train_xgb.py
src/app/ui/: streamlit_app.py
src/app/utils/: hash.py  io.py
src/app/vision/: dinov3_extractor.py
